# llm-tts-service

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  ANALYSIS_TOKEN_LIMITS.md  CLAUDE.md  DEVELOPMENT_PROCESS.md  INVESTIGATION_OFFLINE_BON_ANSWER_EXTRACTION.md  LICENSE  Lab09.ipynb  Makefile  README.md  REFACTORING_PLAN_TOKEN_LIMITS.md  SERVICE_QUICKSTART.md  docker-compose.yml  pyproject.toml  setup.sh  start_service_app.sh  test.ipynb  test_deepconf_local.py  test_qwen3_baseline.py
.github/workflows/: lint.yml  test.yml
MATH/: data-00000-of-00001.arrow
NLP_project/midterm/: README.md  compile.sh  midterm_report.aux  midterm_report.bbl  midterm_report.blg  midterm_report.out  midterm_report.tex  references.bib
conf/: config.yaml
config/: README.md  chain_of_thought_api_test.yaml  chain_of_thought_test.yaml  config.yaml  deepconf_api_test.yaml  run_tts_eval.yaml  run_tts_eval_adaptive_scaling.yaml  run_tts_eval_mur.yaml  run_tts_eval_phi.yaml  self_consistency_api_test.yaml  self_consistency_test.yaml  uncert_cot.yaml  uncertainty_openai_gsm8k.yaml  uncertainty_openrouter_gsm8k.yaml  uncertainty_together_gsm8k.yaml
docs/: PROJECT_STRUCTURE.md  ROBUSTNESS.md  SLURM.md  STRATEGY_REGISTRATION.md  adaptive_scaling_code_prefill_problem.md  architecture.md  kernelact-integration.md  openrouter_prefill_support.md  step_boundary_detectors.md  vllm_vs_hf.md
examples/: MUR.ipynb  README.md  adaptive_uncertainty_routing.py  basic_example.ipynb  langgraph_uncertainty_routing.py
frontend/: SETUP.md
llm_tts/: api_models.py  api_strategies.py  confidence_processor.py  confidence_scoring.py  deepseek_annotator.py  deepseek_chat.py  early_stopping.py  evaluator_gold_standard_deepseek.py  openrouter_chat.py  scale_discriminator.py  step_boundary_detector.py  step_candidate_generator.py  step_candidate_generator_base.py  step_candidate_generator_through_api.py  step_candidate_generator_through_huggingface.py  step_candidate_generator_through_vllm.py  step_detection.py  step_generation.py  together_chat.py
lm-polygraph-additions/: vllm_logprobs.py  vllm_with_uncertainty.py
notebooks/: wandb_results_analysis.ipynb
prompts/: gsm8k_deepconf.txt
reports/: garbage_analysis_example.md  garbage_analysis_single_sample.md  model_capabilities_probe.md
scripts/: add_cond_prob_example.py  add_crt_example.py  aggregate_seed_results.py  analyze_candidates.py  analyze_garbage_generation.py  analyze_gsm8k.py  analyze_thinking_steps.py  convert_datasets.py  create_clearml_scorer_task.py  create_clearml_task.py  demo_tot_viz.py  evaluate_gsm8k_llm_judge.py  evaluate_one_by_one.py  evaluate_results.py  generate_cached_examples.py  log_results_to_wandb.py  math_eval_subprocess.py  patch_cached_examples.py  probe_model_capabilities.py  refactor_strategy_defaults.py  run_llm_judge_local.py  run_tts_eval.py  run_tts_eval_clearml.py  run_uncert_api_eval.py  serve_scorer.py  serve_scorer_vllm.py  test_generic_tot.py  test_prefill.py  test_prefill_models.py  tot_service_examples.py  upload_to_hf.py  verify_strategy_refactor.py  visualize_mock_tot.py
service/: Dockerfile  README.md  main.py  requirements.txt
service_app/: .dockerignore  .env.example  Dockerfile  README.md  main.py
tests/: README.md  strategy_registry.py  test_config_naming.py  test_human_eval_plus_integration.py  test_mbpp_plus_integration.py
tts-eval/: run_tts_eval.py
web_app/: README.md
(+1356 files in other folders)
